Modified spacing and font size properties per the Modular Scale (http://modularscale.com/) Also added a few classes to support blockquotes and lists in posts. (Addresses Issue #3) https://github.com/mattvears/html5-wordpress-boilerplate/issues/3

--- a/css/wordpress.css
+++ b/css/wordpress.css
@@ -11,61 +11,65 @@ aside * ul { list-style-type: none; color: #666666; }
 .alignleft { float: left; }
 .alignright { float: right; }
 
-/* Basic two-column layout on a 960px grid */
-#container
-{
+/* Two-column layout on a 960px grid */
+
+/* Modular Scale - http://modularscale.com/scale/?px1=13&px2=18&ra1=1.618&ra2=0
+	----------------------
+	13px @ 1:1.618	
+	18px @ 1:1.618	
+	----------------------*/
+ul, ol {
+	margin-left: 13px;
+}
+	
+#container {
     width: 960px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 32px;
-    margin-bottom: 32px;
+    margin-top: 34.033px;
+    margin-bottom: 34.033px;
 }
 #main, #header-container {
-	padding-left: 16px;
+	padding-left: 18.000px;
 }
-#content-container
-{
-	margin-top: 32px;
-	margin-bottom: 32px;
+#content-container, #comments-container {
+	margin-top: 34.033px;
+	margin-bottom: 34.033px;
 	
 }
-#right-column, #right-header
-{
+#right-column, #right-header {
     float:left;
-    width:300px;
-    margin-left: 32px;
+    width:322.985px;
+    margin-left: 34.033px;
 }
-#left-column, #left-header
-{
-    width: 600px;
+#left-column, #left-header {
+    width: 522.546px;
     float: left;
 }
-#left-column article
-{
-    margin-bottom: 32px;
+#left-column article {
+    margin-bottom: 34.033px;
 }
-#page-list, #breadcrumbs, aside section ul, .textwidget, .tagcloud
-{
-    margin-bottom: 16px;
+#page-list, #breadcrumbs, aside section ul, .textwidget, .tagcloud {
+    margin-bottom: 18.000px;
 }
 .post-meta, .commentlist li
 {
-    margin-top: 16px;
-    margin-bottom: 16px;
+    margin-top: 18.000px;
+    margin-bottom: 18.000px;
 }
 .post-header
 {
-    margin-top: 8px;
-    margin-bottom: 8px;
+    margin-top: 8.035px;
+    margin-bottom: 8.035px;
 }
 .children li
 {
-	padding-left: 16px;
+	padding-left: 18.000px;
 }
 #nav-menu
 {
-	margin-top: 8px;
-	margin-bottom: 8px;
+	margin-top: 8.035px;
+	margin-bottom: 8.035px;
 }
 #nav-menu ul, #nav-menu ol
 {
@@ -74,7 +78,7 @@ aside * ul { list-style-type: none; color: #666666; }
 }
 #nav-menu ul li
 {
-	margin-right: 10px;
+	margin-right: 8.035px;
 }
 
 
@@ -94,7 +98,7 @@ aside * ul { list-style-type: none; color: #666666; }
 
 /* comment form */
 #respond { 
-	margin-top: 16px;
+	margin-top: 18px;
 }
 #commentform p input, #commentform p textarea {
 	display: block;	
@@ -102,15 +106,30 @@ aside * ul { list-style-type: none; color: #666666; }
 
 
 /* text styles */
-.post * blockquote, .post blockquote 
-{
-	padding: 1em;
+.post blockquote {
+	margin: 0 auto;
+	padding-left: 34.033px;
+	padding-right: 34.033px;
+	quotes: "\201C" "\201D";
 }
-
+.post blockquote:before { 
+	content: open-quote; 
+	font-weight: bold; 
+	float: left; 
+	margin-left: -29.124px; 
+	font-size: 34.033px;
+	color: #888;
+}
+ 
 .post-content p, .post-content ul, .post-content ol
 {
-    line-height: 1.4em;
+/*    line-height: 1.618em; */
     margin: 1em 0;
     padding: 0;
-    font-size: 1.2em;
+/*    font-size: 1.385em; */
+    line-height: 1.385em;
+}
+.post-content ul, .post-content ol
+{
+	margin-left: 29.124px;
 }
